--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in Page</title>
+
+    <link rel="stylesheet" href="/assets/css/reset.css">
+    <link rel="stylesheet" href="/assets/css/root.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <header>
@@ -14,15 +18,15 @@
     <section>
         <div id="section__login-content">
             <form action="#">
-                <label for="email">E-mail</label><br>
+                <label for="email">E-mail</label>
                 <input type="email" name="email" id="email">
-                <label for="password">Password</label><br>
+                <label for="password">Password</label>
                 <input type="password" name="password" id="password">
                 <a href="#" target="_blank">Forgot password?</a>
-                <button type="submit">Log In</button>
+                <button type="submit" id="submit">Login</button>
             </form>
         </div>
-        <ul id="section__ul--accounts">
+        <ul id="section__ul--active">
             <li>
                 <a href="#"><img src="/assets/img/google.svg" alt="Google"> Log in with Google</a>
             </li>
@@ -31,13 +35,21 @@
             </li>
         </ul>
         <div class="section--signup">
-            <p>Haven't an account? <a href="#" target="_blank">Sign here!</a></p>
+            <p>Don't have an account? <a href="#" target="_blank"><strong>Register here!</strong></a></p>
         </div>
         <ul id="section__social">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+                <a href="#"><img src="/assets//img/discord.svg" alt="Discord"></a>
+            </li>
+            <li>
+                <a href="#"><img src="/assets/img/instagram.svg" alt="Instagram"></a>
+            </li>
+            <li>
+                <a href="#"><img src="/assets/img/facebook.svg" alt="Facebook"></a>
+            </li>
+            <li>
+                <a href="#"><img src="/assets/img/tiktok.svg" alt="TikTok"></a>
+            </li>
         </ul>
     </section>
 </body>
