--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="section__login-content">
             <form action="#">
                 <label for="email">E-mail</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" autocomplete="off">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
                 <a href="#" target="_blank">Forgot password?</a>
