Refactor in methodology BEM

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="header__ribbon"></div>
     </header>
 
-    <section>
-        <div id="section__login-content">
+    <section class="section">
+        <div id="section__login__content">
             <form action="#">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email" autocomplete="off">
@@ -26,7 +26,7 @@
                 <button type="submit" id="submit">Login</button>
             </form>
         </div>
-        <ul id="section__ul--active">
+        <ul id="section__ul__active">
             <li>
                 <a href="#"><img src="/assets/img/google.svg" alt="Google"> Log in with Google</a>
             </li>
@@ -34,7 +34,7 @@
                 <a href="#"><img src="/assets/img/github.svg" alt="GitHub"> Log in with GitHub</a>
             </li>
         </ul>
-        <div class="section--signup">
+        <div class="section__signup">
             <p>Don't have an account? <a href="#" target="_blank"><strong>Register here!</strong></a></p>
         </div>
         <ul id="section__social">
